force-app/src/objects/OrderApi__Invoice_Installment_Line__c.object
<CustomObject>
    <description>Installment Lines hold the detail for an Installment.</description>
    <fields>
        <fullName>OrderApi__Balance_Due__c</fullName>
        <description>This field identifies the remaining balance unpaid for this installment line.</description>
        <inlineHelpText>This field identifies the remaining balance unpaid for this installment line.</inlineHelpText>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to related Installment</description>
        <inlineHelpText>Linked to related Installment</inlineHelpText>
        <label>Installment</label>
        <referenceTo>OrderApi__Invoice_Installment__c</referenceTo>
        <relationshipLabel>Installment Lines</relationshipLabel>
        <relationshipName>Invoice_Installment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to related Sales Order Line</description>
        <inlineHelpText>Linked to related Sales Order Line</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Installment Lines</relationshipLabel>
        <relationshipName>Invoice_Installment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Installment Line</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Installment Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installment Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>